--- a/RSS-CSS-Selectors/package.json
+++ b/RSS-CSS-Selectors/package.json
@@ -15,6 +15,7 @@
     "devDependencies": {
         "@babel/core": "^7.21.8",
         "@babel/preset-env": "^7.21.5",
+        "@types/node": "^20.3.2",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "babel-loader": "^9.1.2",
@@ -24,13 +25,16 @@
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.1",
         "mini-css-extract-plugin": "^2.7.5",
+        "nodemon": "^2.0.22",
         "postcss": "^8.4.23",
         "postcss-loader": "^7.3.0",
         "sass": "^1.62.1",
         "sass-loader": "^13.2.2",
         "style-loader": "^3.3.2",
-        "ts-loader": "^9.4.3",
+        "ts-loader": "^9.4.4",
+        "ts-node": "^10.9.1",
         "typescript": "^5.1.3",
+        "url-loader": "^4.1.1",
         "webpack": "^5.82.1",
         "webpack-cli": "^5.1.1",
         "webpack-dev-server": "^4.15.0"
