--- a/RSS-CSS-Selectors/package.json
+++ b/RSS-CSS-Selectors/package.json
@@ -7,7 +7,8 @@
         "start": "set NODE_ENV=development&&webpack serve",
         "build:dev": "set NODE_ENV=development&&webpack",
         "build:prod": "set NODE_ENV=production&&webpack",
-        "clean": "rd /s /q dist"
+        "clean": "rd /s /q dist",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -15,6 +16,7 @@
     "devDependencies": {
         "@babel/core": "^7.21.8",
         "@babel/preset-env": "^7.21.5",
+        "@types/jest": "^29.5.2",
         "@types/node": "^20.3.2",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
@@ -24,6 +26,9 @@
         "file-loader": "^6.2.0",
         "html-loader": "^4.2.0",
         "html-webpack-plugin": "^5.5.1",
+        "jest": "^29.6.1",
+        "jest-environment-jsdom": "^29.6.1",
+        "jsdom": "^22.1.0",
         "mini-css-extract-plugin": "^2.7.5",
         "nodemon": "^2.0.22",
         "postcss": "^8.4.23",
@@ -31,6 +36,7 @@
         "sass": "^1.62.1",
         "sass-loader": "^13.2.2",
         "style-loader": "^3.3.2",
+        "ts-jest": "^29.1.1",
         "ts-loader": "^9.4.4",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.3",
@@ -45,3 +51,4 @@
         "postcss-preset-env": "^8.3.2"
     }
 }
+
